# armory-lab

./: .gitignore  README.md  pyproject.toml
armory_lab/: __init__.py  confidence.py  metrics.py  objective.py  plotting.py  run.py  web.py
armory_lab/algos/: __init__.py  base.py  kl_lucb.py  lucb.py  successive_elimination.py  top_two_thompson_sampling.py  track_and_stop.py
armory_lab/envs/: __init__.py  bernoulli.py  weapon_damage.py
demo/: weapon_appraisal.py
experiments/: sweep.py
tests/: test_bernoulli_env.py  test_fixed_confidence_guarantee_smoke.py  test_kl_lucb.py  test_lucb.py  test_run_practical.py  test_successive_elimination.py  test_track_and_stop.py  test_ttts.py  test_weapon_damage_env.py  test_weapon_objectives.py  test_web.py
